--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "bugs": {
     "url": "https://github.com/edwintantawi/boilerplate__typescript-express-vercel/issues"
   },
+	{
+  "type": "module",
+},
   "homepage": "https://github.com/edwintantawi/boilerplate__typescript-express-vercel#readme",
   "dependencies": {
     "@types/express": "^4.16.1",
