--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
   "bugs": {
     "url": "https://github.com/edwintantawi/boilerplate__typescript-express-vercel/issues"
   },
-	{
-  "type": "module",
-},
   "homepage": "https://github.com/edwintantawi/boilerplate__typescript-express-vercel#readme",
   "dependencies": {
     "@types/express": "^4.16.1",
@@ -66,5 +63,8 @@
   },
 "engines" : { 
     "node" : "16.13.0"
-  }
+  },
+  {
+  "type": "module"
+}
 }
