--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "boilerplate__typescript-express-vercel",
   "version": "1.0.0",
-  "type": "module",
+  "type": "commonjs",
   "description": "Typescript & ExpressJS, deploy on Vercel",
   "main": "src/app.ts",
   "scripts": {
