--- a/package.json
+++ b/package.json
@@ -1,68 +1,56 @@
 {
-  "name": "boilerplate__typescript-express-vercel",
+  "name": "server",
   "version": "1.0.0",
-  "type": "module",
-  "description": "Typescript & ExpressJS, deploy on Vercel",
-  "main": "src/app.ts",
+  "description": "",
+  "main": "src/index.js",
   "scripts": {
-    "start": "npm i && npm i express && node dist/app.js",
-    "dev": "ts-node-dev --respawn src/app.ts",
-    "build": "npm run clean && tsc && npm run copy-assets",
-    "copy-assets": "ts-node tools/copyAssets",
-    "clean": "rimraf build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/edwintantawi/boilerplate__typescript-express-vercel.git"
+    "build": "tsc",
+    "start": "node dist/src/index.js",
+    "dev": "nodemon src/index.ts",
+    "test": "jest --verbose --coverage",
+    "test:unit": "jest --testPathPattern=tests/unit --verbose --detectOpenHandles",
+    "test:integration": "jest --testPathPattern=tests/integration/routes/comments.test.ts --verbose --detectOpenHandles",
+    "migrate-data": "ts-node src/db/migration.ts"
   },
   "keywords": [],
-  "author": "edwintantawi",
+  "author": "Keerty Verma",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/edwintantawi/boilerplate__typescript-express-vercel/issues"
-  },
-  "homepage": "https://github.com/edwintantawi/boilerplate__typescript-express-vercel#readme",
-  "dependencies": {
-    "@types/express": "^4.16.1",
-    "@types/socket.io": "^2.1.2",
-    "@types/socket.io-client": "^1.4.32",
-    "@types/uuid": "^9.0.4",
-    "concurrently": "^4.1.0",
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.6",
-    "nodemon": "^1.18.9",
-    "prisma": "^5.2.0",
-    "socket.io": "^4.7.1",
-    "socket.io-msgpack-parser": "^3.0.2",
-	"@types/node": "^16.6.2",
-    "@types/shelljs": "^0.8.9",
-    "axios": "^0.18.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "http": "^0.0.0",
-    "rimraf": "^3.0.2",
-    "shelljs": "^0.8.4",
-    "ts-node": "^10.2.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5",
-    "uuid": "^9.0.1"
-  },
   "devDependencies": {
-    "@prisma/client": "^5.2.0",
-    "@types/node": "^16.6.2",
-    "@types/shelljs": "^0.8.9",
-    "axios": "^0.18.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "http": "^0.0.0",
-    "rimraf": "^3.0.2",
-    "shelljs": "^0.8.4",
-    "ts-node": "^10.2.1",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5",
-    "uuid": "^9.0.1"
+    "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
+    "@types/config": "^3.3.4",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/ms": "^0.7.34",
+    "@types/node": "^20.12.8",
+    "@types/supertest": "^6.0.2",
+    "jest-html-reporter": "^3.10.2",
+    "supertest": "^7.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
-"engines" : { 
-    "node" : "16.13.0"
-  } 
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
+    "compression": "^1.7.4",
+    "config": "^3.3.11",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^7.2.0",
+    "firebase-admin": "^12.1.0",
+    "helmet": "^7.1.0",
+    "http-status-codes": "^2.3.0",
+    "jest": "^29.7.0",
+    "joi": "^17.13.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2",
+    "ms": "^2.1.3",
+    "nanoid": "^3.0.0",
+    "ts-jest": "^29.1.2",
+    "winston": "^3.13.0"
+  }
 }
